<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Proxymator2</string>
    <string name="action_settings">Settings</string>
    <string name="main">Main</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="action_add_profile">Add Profile</string>
    <string name="action_del_profile">Remove Profile</string>
    <string name="action_onoff">Start/Stop</string>
    <string name="add_profile">Add Profile</string>
    <string name="specify_name">Specify profile name</string>
    <string name="proxy_addr">Proxy address</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="proxy_port">Proxy port</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="advanced">Advanced</string>
    <string name="profile">Profile</string>
    <string name="proxy_settings">Proxy Settings</string>
    <string name="proxy_address">Proxy Address</string>
    <string name="authorization">Authorization</string>
    <string name="use_auth">Use Authorization</string>
    <string name="auth_type">Authorization type</string>
    <string name="dns_resolver">DNS Resolver URL</string>
    <string name="use_dns_resolver">Use DNS resolver</string>
    <string name="profiles">Profiles</string>
    <string name="max_profiles_error">Maximum number of profiles reached!</string>
    <string name="max_profiles_lite_error">Lite version allows 2 proxy profiles only!</string>
    <string name="profile_saved">Profile saved</string>
    <string name="profile_deleted">Profile deleted</string>
    <string name="dns_query_str">Query string</string>
    <string name="dns_query_post">Use POST method</string>
    <string name="onlyBasic">Only BASIC auth supported for now</string>
    <string name="proxy_user_name">Proxy user name</string>
    <string name="proxy_user_passwd">Proxy user password</string>
    <string name="proxy_srv_addres">Proxy server address</string>
    <string name="associated_network">Associated network</string>
    <string name="associated_net_desc">Associate profile with desired 3G or WiFi network</string>
    <string name="auto_connect">Autoconnect</string>
    <string name="starting_error">Error! Something goes wrong! Enable logging and send a bug report!</string>
    <string name="select_net">Select network</string>
    <string name="golbal_disable">Global disable</string>
    <string name="proxymator_about">Proxymator is a TCP connection tunneler via existing proxy server.\nProxymator will be useful if your proxy has CONNECT method enabled for commonly used TCP ports such as IMAP,SMTP,POP3,HTTP,etc and BASIC authorization support.\nNo NTLM and other authorization types supported yet.\nRooted device required to work!</string>
    <string name="proxymator_howto">Add new profile and specify the proxy server address and port. Specify username and password if your proxy required authorization.\nIf your internal DNS is capable of external names resolving, uncheck \'Use DNS resolver\'. Otherwise try with default settings. It is possible to use almost any on-line nslookup service for resolving but you must be aware of query stirng and method used (You can find it out by using Firefox’s built-in web debugger) and returned query results must contain \'Address: ip_adderss\'</string>
    <string name="auto_desc">Automatically activate profile on selected network</string>
    <string name="use_proxy_auth">Use proxy authorization</string>
    <string name="use_dns_desc">Use external web based DNS resolver</string>
    <string name="autoconn_desc">Disables Proxymator globally</string>
    <string name="enable_log">Enable logging</string>
    <string name="enable_logging_desc">Enable debug logging</string>
    <string name="proxy_addr_too_short">Proxy address is too short!</string>
    <string name="proxy_port_too_short">Port value is too short!</string>
    <string name="value_too_short">Value too short!</string>
    <string name="bypass_ip">Specify IP addresses</string>
    <string name="donot_proxify">Do not proxiy specified IPs</string>

</resources>
