<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="false">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="6dp">

        <TextView
            android:id="@+id/_global_disable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/golbal_disable"
            android:layout_marginTop="7dip"
            android:layout_marginBottom="1dp"
            style="@style/Text"
            android:paddingLeft="7dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/global_disable"
            android:layout_marginTop="7dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="7dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/autoconn_desc"
            style="@style/TextSmall"
            android:paddingLeft="7dp"
            android:layout_below="@id/_global_disable"
            android:layout_marginBottom="7dp"/>

    </RelativeLayout>
    <View style="@style/divider"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="6dp">

        <TextView
            android:id="@+id/_enable_logging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_log"
            android:layout_marginTop="7dip"
            android:layout_marginBottom="1dp"
            style="@style/Text"
            android:paddingLeft="7dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/enable_logging"
            android:layout_marginTop="7dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="7dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_logging_desc"
            style="@style/TextSmall"
            android:paddingLeft="7dp"
            android:layout_below="@id/_enable_logging"
            android:layout_marginBottom="7dp"/>

    </RelativeLayout>
    <View style="@style/divider"
        />
</LinearLayout>
</ScrollView>